--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
 Timur Shemsedinov <timur.shemsedinov@gmail.com>
+Ivan Smirnov <wansmer@gmail.com>
+Eugen Shaposhnikov <eawapownikov@gmail.com>
+Ranko Stevanovich <ranko.stevanovich@gmail.com>
