Update license and authors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Timur Shemsedinov <timur.shemsedinov@gmail.com>
 Ivan Smirnov <wansmer@gmail.com>
 Eugen Shaposhnikov <eawapownikov@gmail.com>
 Ranko Stevanovich <ranko.stevanovich@gmail.com>
+Saro Amirkhanyan <saroamirkhanyan@gmail.com>
